Refactor FormController and FormDataController to streamline method implementations; add FormListItemMapper for improved form list mapping